21-GKE-Gateway-API/05-GKE-Gateway-API-HTTP-to-HTTPS-Redirect/p2-regional-k8sresources-yaml/03-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80 
  - name: https
    protocol: HTTPS
    port: 443  
    tls:
      mode: Terminate
      options: 
        networking.gke.io/cert-manager-certs: app1-us-central1-cert  
  addresses:
  - type: NamedAddress
    value: my-regional-ip1
