21-GKE-Gateway-API/05-GKE-Gateway-API-HTTP-to-HTTPS-Redirect/p2-regional-k8sresources-yaml/05-gateway-http-to-https-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: redirect
spec:
  parentRefs:
  - name: mygateway1-regional
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
